syntax = "proto3";
option go_package = "github.com/twirapp/twir/libs/api/messages/tts_unprotected";
package messages.tts_unprotected;

message Settings {
	string user_id = 1;
	uint32 rate = 2;
	uint32 volume = 3;
	uint32 pitch = 4;
	string voice = 5;
}

message GetChannelSettingsRequest {
	string channel_id = 1;
}

message GetUsersSettingsRequest {
	string channel_id = 1;
}

message GetUsersSettingsResponse {

	repeated Settings settings = 1;
}
